api/swim_form/src/tests/derive/form/tag_no_to_string.stderr
error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:25:9
   |
21 |     #[derive(Form)]
   |              ---- required by a bound introduced by this call
...
25 |         a: B,
   |         ^ the trait `AsRef<str>` is not implemented for `B`

error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `AsRef<str>` is not implemented for `B`
   |
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_form::structural::Tag` is not satisfied
    --> src/tests/derive/form/tag_no_to_string.rs:21:14
     |
21   |     #[derive(Form)]
     |              ^^^^ the trait `swim_form::structural::Tag` is not implemented for `B`
     |
     = help: the trait `Recognizer` is implemented for `TagRecognizer<T>`
     = help: the trait `Recognizer` is implemented for `TagRecognizer<T>`
     = note: required because of the requirements on the impl of `Recognizer` for `TagRecognizer<B>`
note: required by a bound in `feed_field`
    --> src/structural/read/recognizer/mod.rs
     |
     |     R: Recognizer,
     |        ^^^^^^^^^^ required by this bound in `feed_field`
     = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_form::structural::Tag` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `swim_form::structural::Tag` is not implemented for `B`
   |
   = help: the trait `Recognizer` is implemented for `TagRecognizer<T>`
   = note: required because of the requirements on the impl of `Recognizer` for `TagRecognizer<B>`
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_form::structural::Tag` is not satisfied
  --> src/tests/derive/form/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `swim_form::structural::Tag` is not implemented for `B`
   |
   = help: the trait `Default` is implemented for `TagRecognizer<T>`
   = note: required because of the requirements on the impl of `Default` for `TagRecognizer<B>`
   = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)
